# orbipacket-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
src/: decode.rs  device_id.rs  encode.rs  lib.rs  payload.rs
