[package]
name = "orbipacket"
version = "0.1.0"
edition = "2021"
license = "MIT OR APACHE-2.0"
authors = ["Levi Gomes", "The OrbiSat Oeiras Team"]
description = "A packet based protocol for communication with CanSat devices."

[dependencies]
bytes = { version = "1.10.1", default-features = false }
corncobs = "0.1.3"
crc = "3.2.1"
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
], optional = true }
serde_with = { version = "3.14.0", default-features = false, features = [
    "macros",
], optional = true }

[features]
serde = ["dep:serde", "dep:serde_with"]
