[package]
name = "orbipacket"
version = "0.1.0"
authors = ["Levi Gomes", "The OrbiSat Oeiras Team"]
categories = [
    "aerospace",
    "aerospace::protocols",
    "embedded",
    "no-std",
    "no-std::no-alloc",
]
description = "A packet based protocol for communication with CanSat devices"
keywords = ["orbipacket", "orbisat", "protocol", "cansat"]
edition = "2021"
license = "MIT OR APACHE-2.0"
repository = "https://github.com/orbisat-oeiras/orbipacket-rs"
rust-version = "1.81.0"

[dependencies]
cobs = { version = "0.4.0", default-features = false }
crc = "3.2.1"
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
], optional = true }
serde_with = { version = "3.14.0", default-features = false, features = [
    "macros",
], optional = true }
thiserror = { version = "2.0.12", default-features = false }

[features]
serde = ["dep:serde", "dep:serde_with"]
